Mon Sep 14 08:02:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          Improved debug message

Mon Sep 14 06:39:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Fixed_Array_Argument_T.cpp:
          Layout changes

Fri Sep 11 02:39:39 CDT 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAO version 1.7.3 released.

Thu Sep 10 07:07:01 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/be/be_visitor_field/serializer_op_cs.cpp:
        * TAO_IDL/be/be_visitor_sequence/serializer_op_cs.cpp:

          Corrected code generation to count WChar size for wstring
          marshal size.

Wed Sep  9 12:43:42 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/catiorlib.mpb:
        * utils/catior/catior.mpc:

          Renamed the TAO_Catior library to TAO_Catior_i to accomodate the
          'vxtest' project type.

Wed Sep  9 12:38:15 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/ORB_Core.cpp:
        * tao/Leader_Follower_Flushing_Strategy.cpp:
        * tao/Messaging/Messaging_Policy_i.cpp:
        * tao/ORB_Core.h:

          Reverted fixes for bug#3682 and bug#3697 as there are
          problems with them and the new x.7.3 release is very close.

Wed Sep  9 09:50:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * bin/tao_other_tests.lst:

          Stop running test that occationaly locksup the LynsOS kernal.

Tue Sep  8 16:16:17 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Leader_Follower_Flushing_Strategy.cpp:

          Additional fix for bug#3697. It must fix Bug_1551_Regression
          which got broken by the original fix.

Tue Sep  8 10:46:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:
          set the correct header length for the next fragment. This
          fixes bugzilla 3275, thanks to Simon Massey for pointing this out
