@@ -1,3 +1,8 @@
+Mon Sep 14 08:03:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/POA/DSI/run_test.pl:
+          Check return value of spawn
+
 Mon Sep 14 08:02:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/ORB_Core.cpp:
